--- a/src/Elastic.Stack.ArtifactsApi/Elastic.Stack.ArtifactsApi.csproj
+++ b/src/Elastic.Stack.ArtifactsApi/Elastic.Stack.ArtifactsApi.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
         <Description>Provides a set of classes to resolve the location of Elastic stack products in various stages: released, snapshot and build candidates</Description>
@@ -6,7 +6,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="SemanticVersioning" Version="0.8.0" />
+        <PackageReference Include="SemanticVersioning" Version="1.3.0" />
         <PackageReference Include="System.Text.Json" Version="4.6.0" />
     </ItemGroup>
 
